# Totp

./: .gitignore  Makefile  README.md  generate_totp.py  pyproject.toml
.github/workflows/: main.yml
resources/: config.env
src/: __init__.py  main.py
src/cli/: main.py  totp_cli.py
src/config/: config.py  locale_message.py  logging.py  logging_config.toml  resource.py  secure_key.py
src/core/: config.py  database.py  logging.py  totp_utils.py
src/core/config/: config.py  logging.py
src/core/data/: base_model.py  database.py
src/core/data/entity/: totp_account.py  totp_key_storage.py
src/core/data/operation/: totp_account_manager.py
src/core/utils/: encryption_utils.py  totp_utils.py
src/gui/: main.py  widgets.py
src/module/: cli.py
src/module/gui/: main_gui.py
