[project]
name = "totp"
version = "0.1.0"
description = "A tool to generate TOTP"
authors = [
    {name = "kdoy",email = "zj.wang.work@zohomail.cn"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "poetry-core (>=2.1.3,<3.0.0)"
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
