[project]
name = "totp"
version = "0.1.0"
description = "A tool to generate TOTP"
authors = [
    {name = "kdoy",email = "zj.wang.work@zohomail.cn"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "poetry-core (>=2.1.3,<3.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "peewee (>=3.18.2,<4.0.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"


[tool.poetry.group.dev.dependencies]
nuitka = "^2.7.12"
python-dotenv = "^1.1.1"
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
